# pdk8s

./: .editorconfig  .gitignore  CHANGELOG.md  Pipfile  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: cdk8s.md
example/: hello_world.py
generator/template/pydantic/: Config.jinja2
pdk8s/: __init__.py  chart_cli.py  cli.py  gen_k8s.py  k8s.py  model.py  synth.py
pdk8s/cookiecutter/: cookiecutter.json
pdk8s/cookiecutter/{{cookiecutter.slug}}/: chart.py
tests/: __init__.py  test_cli.py  test_gen.py  test_model.py
tests/test_charts/: empty.py  simple.py
