[tool.poetry]
name = "pdk8s"
version = "0.2.2"
description = ""
authors = ["Florian Ludwig <f.ludwig@greyrook.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "1.5.1"
pyyaml = "5.3.1"
click = "7.1.2"
cookiecutter = "1.7.2"
setuptools = "47.1.1"
datamodel-code-generator = "^0.5.9"

[tool.poetry.dev-dependencies]
pytest = "5.4.3"
mypy = "0.780"
pylint = "2.5.3"
black = "19.10b0"
pytest-cov = "2.9.0"

[tool.poetry.scripts]
pdk8s = 'pdk8s.cli:main'

[tool.black]
skip-string-normalization = 0

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"